--- a/민트-박지수/mint_react/package.json
+++ b/민트-박지수/mint_react/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
+    "sakura-js": "^1.1.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "use-immer": "^0.9.0",
