--- a/조이-이지은/react/react-kurly/package.json
+++ b/조이-이지은/react/react-kurly/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "redux": "^4.2.1",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
