--- a/안나-김민희/react-airbnb-app/package.json
+++ b/안나-김민희/react-airbnb-app/package.json
@@ -14,10 +14,13 @@
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-login": "^2.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.61.0",
     "styled-components": "^5.3.10",
     "swiper": "^9.2.0",
