--- a/안나-김민희/react-airbnb-app/package.json
+++ b/안나-김민희/react-airbnb-app/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-login": "^2.1.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
